--- a/tmdb-box-office-prediction/Movie Revenue Prediction.ipynb
+++ b/tmdb-box-office-prediction/Movie Revenue Prediction.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1e8084237b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x14d35ba47f0>"
       ]
      },
      "execution_count": 10,
@@ -1157,9 +1157,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSLE score of Random Forest Model is 2.474313175599159\n",
-      "Accuracy: 0.5742\n",
-      "MAE: 43518566.5446\n"
+      "RMSLE score of Random Forest Model is 2.4958102383210803\n",
+      "Accuracy: 0.5935\n",
+      "MAE: 43743863.4529\n"
      ]
     },
     {
@@ -1179,7 +1179,7 @@
     "\n",
     "y_pred = rf_model.predict(X_val)\n",
     "print(\"RMSLE score of Random Forest Model is {}\".format(rmsle(y_val,y_pred)))\n",
-    "print(\"Accuracy: {0:.4f}\".format(lr_model.score(X_val,y_val)))\n",
+    "print(\"Accuracy: {0:.4f}\".format(rf_model.score(X_val,y_val)))\n",
     "print(\"MAE: {0:.4f}\".format(mean_absolute_error(y_pred, y_val)))"
    ]
   },
@@ -1221,7 +1221,7 @@
      "output_type": "stream",
      "text": [
       "RMSLE score of KNeighborsRegressor Model is 2.51200337101609\n",
-      "Accuracy: 0.5742\n",
+      "Accuracy: 0.4463\n",
       "MAE: 48678666.4071\n"
      ]
     }
@@ -1234,7 +1234,7 @@
     "\n",
     "y_pred = kn_model.predict(X_val)\n",
     "print(\"RMSLE score of KNeighborsRegressor Model is {}\".format(rmsle(y_val,y_pred)))\n",
-    "print(\"Accuracy: {0:.4f}\".format(lr_model.score(X_val,y_val)))\n",
+    "print(\"Accuracy: {0:.4f}\".format(kn_model.score(X_val,y_val)))\n",
     "print(\"MAE: {0:.4f}\".format(mean_absolute_error(y_pred, y_val)))"
    ]
   },
@@ -1261,7 +1261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. XGBoost"
+    "#### 4. XGBRegressor"
    ]
   },
   {
@@ -1270,26 +1270,33 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'from xgboost import XGBClassifier\\n\\nxg_model = XGBClassifier()\\nxg_model.fit(X_train, y_train)\\n\\ny_pred = xg_model.predict(X_val)\\nprint(\"RMSLE score of XGBClassifier Model is {}\".format(rmsle(y_val,y_pred)))\\nprint(\"Accuracy: {0:.4f}\".format(lr_model.score(X_val,y_val)))\\nprint(\"MAE: {0:.4f}\".format(mean_absolute_error(y_pred, y_val)))'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE score of XGBRegressor Model is 2.604091050138997\n",
+      "Accuracy: 0.6598\n",
+      "MAE: 39815165.0339\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: RuntimeWarning: invalid value encountered in log1p\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
     }
    ],
    "source": [
-    "\"\"\"from xgboost import XGBClassifier\n",
+    "from xgboost import XGBRegressor\n",
     "\n",
-    "xg_model = XGBClassifier()\n",
-    "xg_model.fit(X_train, y_train)\n",
+    "xg_regressor_model = XGBRegressor()\n",
+    "xg_regressor_model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = xg_model.predict(X_val)\n",
-    "print(\"RMSLE score of XGBClassifier Model is {}\".format(rmsle(y_val,y_pred)))\n",
-    "print(\"Accuracy: {0:.4f}\".format(lr_model.score(X_val,y_val)))\n",
-    "print(\"MAE: {0:.4f}\".format(mean_absolute_error(y_pred, y_val)))\"\"\""
+    "y_pred = xg_regressor_model.predict(X_val)\n",
+    "print(\"RMSLE score of XGBRegressor Model is {}\".format(rmsle(y_val,y_pred)))\n",
+    "print(\"Accuracy: {0:.4f}\".format(xg_regressor_model.score(X_val,y_val)))\n",
+    "print(\"MAE: {0:.4f}\".format(mean_absolute_error(y_pred, y_val)))"
    ]
   },
   {
@@ -1303,24 +1310,70 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_xg_regressor_prediction = xg_regressor_model.predict(test)\n",
+    "\n",
+    "sub_lr['revenue'] = y_xg_regressor_prediction\n",
+    "sub_lr.to_csv('XGBoost_Regressor_Submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. XGBClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'xg_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-31-e71e3de0cd6b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my_xg_prediction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxg_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msub_lr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'revenue'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my_xg_prediction\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0msub_lr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'XGBoost_Submission.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'xg_model' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'from xgboost import XGBClassifier\\n\\nxg_classifier_model = XGBClassifier()\\nxg_classifier_model.fit(X_train, y_train)\\n\\ny_pred = xg_classifier_model.predict(X_val)\\nprint(\"RMSLE score of XGBClassifier Model is {}\".format(rmsle(y_val,y_pred)))\\nprint(\"Accuracy: {0:.4f}\".format(xg_classifier_model.score(X_val,y_val)))\\nprint(\"MAE: {0:.4f}\".format(mean_absolute_error(y_pred, y_val)))'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_xg_prediction = xg_model.predict(test)\n",
+    "\"\"\"from xgboost import XGBClassifier\n",
     "\n",
-    "sub_lr['revenue'] = y_xg_prediction\n",
-    "sub_lr.to_csv('XGBoost_Submission.csv', index=False)"
+    "xg_classifier_model = XGBClassifier()\n",
+    "xg_classifier_model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = xg_classifier_model.predict(X_val)\n",
+    "print(\"RMSLE score of XGBClassifier Model is {}\".format(rmsle(y_val,y_pred)))\n",
+    "print(\"Accuracy: {0:.4f}\".format(xg_classifier_model.score(X_val,y_val)))\n",
+    "print(\"MAE: {0:.4f}\".format(mean_absolute_error(y_pred, y_val)))\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"y_xg_classifier_prediction = xg_classifier_model.predict(test)\\n\\nsub_lr['revenue'] = y_xg_classifier_prediction\\nsub_lr.to_csv('XGBoost_Regressor_Submission.csv', index=False)\""
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"y_xg_classifier_prediction = xg_classifier_model.predict(test)\n",
+    "\n",
+    "sub_lr['revenue'] = y_xg_classifier_prediction\n",
+    "sub_lr.to_csv('XGBoost_Regressor_Submission.csv', index=False)\"\"\""
    ]
   },
   {
